--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "handlebars": "^4.0.10",
     "minimist": "^1.2.0"
+  },
+  "bin": {
+    "react-component-generator": "./index.js"
   }
 }
