Add git repository to package.json

--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   },
   "bin": {
     "srcg": "./index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/glosee/srcg.git"
   }
 }
